# data/servers/_tool/types/ServerInfo.ts
@@ -7,7 +7,9 @@ export interface ServerInfo {
   title: string;
   description: string;
   languages: string[];
+  display_languages: string[];
   region: string;
+  display_region: string;
   categories: string[];
   proxied_thumbnail: string;
   blurhash: string;
@@ -16,5 +18,6 @@ export interface ServerInfo {
   last_week_users: number;
   approval_required: boolean;
   language: string;
+  display_language: string;
   category: string;
 }
